[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Charles VUILLECARD <charles.vuillecard@ouidou.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam= "0.2.8"
num_cpus= "1.13.0"
image= "0.13.0"
num = "0.1.27"
